# AdventCalendar

./: .gitignore  CMakeLists.txt  CMakeLists_2020.txt  README.md
2021/: CMakeLists.txt  resource.h.in
2021/include/: adventdays_fwd.h  dive.h  grid.h  resource.h  utils.h
2021/src/: binary_diagnostic.cpp  chiton.cpp  dirac_dice.cpp  dive.cpp  dumbo_octopus.cpp  lanternfish.cpp  main.cpp  passage_pathing.cpp  sonar_sweep.cpp  utils.cpp
2022/: CMakeLists.txt
2022/include/: adventdays_fwd.h  ansi_colors.h  day16.h  grid.h  resource.h  std_includes.h  utils.h  vector2.h
2022/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp  utils.cpp
AdventCalendar2020/: main.cpp
AoC2023/Assets/: UniversalRenderPipelineGlobalSettings.asset
AoC2023/Assets/Scenes/: SampleScene.unity
AoC2023/Assets/Scripts/Problems/: day01.cs  day02.cs  day03.cs  day04.cs  day05.cs  day06.cs  day07.cs  day08.cs  day09.cs  day10.cs  day11.cs  day12.cs  day13.cs  day14.cs  day15.cs
AoC2023/Assets/Scripts/Utils/: Grid.cs
AoC2023/Assets/Settings/: UniversalRP.asset
AoC2023/ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
common/: ansi_colors.h  day_base.h  design_base.h  read_documents_utils.h  resource.h.in  resources.cpp  resources.h  string_utils.cpp  string_utils.h  utils_2021.cpp  utils_2022.cpp
day1/: CMakeLists.txt  resource.h.in
day1/include/: resource.h
day1/src/: number2020.cpp
day10/: CMakeLists.txt  resource.h.in
day10/include/: resource.h
day10/src/: joltsAdapters.cpp
day11/: CMakeLists.txt  resource.h.in
day11/include/: resource.h
day11/src/: ferrySeats.cpp
day12/: CMakeLists.txt  resource.h.in
day12/include/: resource.h
day12/src/: navInstructions.cpp
day13/: CMakeLists.txt  resource.h.in
day13/include/: resource.h
day13/src/: busToAirport.cpp
day14/: CMakeLists.txt  resource.h.in
day14/include/: resource.h
day14/src/: bitmask.cpp
day15/: CMakeLists.txt  resource.h.in
day15/include/: resource.h
day15/src/: numbersGame.cpp
day16/: CMakeLists.txt  resource.h.in
day16/include/: resource.h
day16/src/: ticketValidation.cpp
day17/: CMakeLists.txt  resource.h.in
day17/include/: resource.h
day17/src/: conwayCubes.cpp
day18/: CMakeLists.txt  resource.h.in
day18/include/: resource.h
day18/src/: operationOrder.cpp
day19/: CMakeLists.txt  resource.h.in
day19/include/: resource.h
day19/src/: monsterMessages.cpp
day2/: CMakeLists.txt  resource.h.in
day2/include/: resource.h
day2/src/: password.cpp
day20/: CMakeLists.txt  resource.h.in
day20/include/: resource.h
day20/src/: jurassicJigsaw.cpp
day21/: CMakeLists.txt  resource.h.in
day21/include/: resource.h
day21/src/: allergenAssesment.cpp
day22/: CMakeLists.txt  resource.h.in
day22/include/: resource.h
day22/src/: crabCombat.cpp
day23/: CMakeLists.txt  resource.h.in
day23/include/: resource.h
day23/src/: crabCups.cpp
day24/: CMakeLists.txt  resource.h.in
day24/include/: resource.h
day24/src/: lobbyLayout.cpp
day25/: CMakeLists.txt  resource.h.in
day25/include/: resource.h
day25/src/: comboBreaker.cpp
day3/: CMakeLists.txt  resource.h.in
day3/include/: resource.h
day3/src/: tobogan.cpp
day4/: CMakeLists.txt  resource.h.in
day4/include/: resource.h
day4/src/: passports.cpp
day5/: CMakeLists.txt  resource.h.in
day5/include/: resource.h
day5/src/: seats.cpp
day6/: CMakeLists.txt  resource.h.in
day6/include/: resource.h
day6/src/: forms.cpp
day7/: CMakeLists.txt  resource.h.in
day7/include/: resource.h
day7/src/: luggage.cpp
day8/: CMakeLists.txt  resource.h.in
day8/include/: resource.h
day8/src/: game.cpp
day9/: CMakeLists.txt  resource.h.in
day9/include/: resource.h
day9/src/: XMASencrypt.cpp
events/2020/: CMakeLists.txt
events/2020/calendar/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
events/2021/: CMakeLists.txt  design.h
events/2021/calendar/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day21.cpp
events/2021/include/: adventdays_fwd.h  grid.h  sonar_sweep.h  utils.h
events/2021/src/: chiton.cpp  giant_squid.cpp  seven_segment_search.cpp  smoke_basin.cpp  the_treachery_of_whales.cpp  utils.cpp
events/2021/tests/: CMakeLists.txt
events/2022/: CMakeLists.txt  CMakeLists__.txt  design.h
events/2022/calendar/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
events/2022/include/: adventdays_fwd.h  day16.h  resource.h  vector2.h
events/2023/: CMakeLists.txt  design.h
events/2024/: CMakeLists.txt  design.h
events/2024/calendar/: day01.cpp
executable/: main.cpp
